add id's for sections

--- a/scss/blocks/_connection.scss
+++ b/scss/blocks/_connection.scss
@@ -1,5 +1,5 @@
 .connection{
-   padding-top: 1160px;
+   padding-top: 960px;
    padding-bottom: 1px;
 }
 .connection__inside{
@@ -10,7 +10,7 @@
    position: absolute;
    z-index: 2;
    right: calc(50% + 241px);
-   top: calc(50% - 900px);
+   top: calc(50% - 850px);
    transition: 0.4s ease;
 }
 .connection__frame-case:hover{
@@ -25,7 +25,7 @@
    background-color: #333333;
    padding: 60px 0px 75px 166px;
    left: calc(50% - 241px);
-   top: calc(50% - 900px);
+   top: calc(50% - 850px);
 }
 .connection__title{
    font-family: "Futura PT";
@@ -90,8 +90,9 @@
    height: 165px;
    resize: none;
    outline: none;
-   padding: 16px 0px 13px 22px;
+   padding: 16px 5px 13px 22px;
    border: 2px solid transparent;
+   overflow: hidden;
 }
 .connection__text-aria:focus{
    border: 2px solid #FFBD54;
